--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-config-oclif-typescript": "^0.1.0",
     "mocha": "^5.2.0",
     "nyc": "^14.1.1",
+    "sinon": "^9.0.2",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   },
