--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^5.2.7",
     "@types/node": "^10.17.19",
+    "@types/sinon-chai": "^3.2.4",
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-oclif": "^3.1.0",
@@ -41,6 +42,7 @@
     "mocha": "^5.2.0",
     "nyc": "^14.1.1",
     "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   },
